--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,8 +3,7 @@
     "target": "es6"
   },
   "include": [
-    "*.js",
     "**/*.js",
-    "c:\\Users\\marc\\.vscode\\extensions\\samplavigne.p5-vscode-1.2.15\\p5types\\global.d.ts"
+    "node_modules/@types/p5/global.d.ts"
   ]
 }
